--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Snorre</title>
+  <title>Duftaufzug</title>
   <meta name="description" content="Painting created with p5.js.">
   <meta name="author" content="Stefan Schwaha">
 
-  <meta property="og:title" content="Snorre">
+  <meta property="og:title" content="Duftaufzug">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://digitalitility.com">
-  <meta property="og:description" content="In Snorre we trust.">
+  <meta property="og:description" content="In Duftaufzug we trust.">
   <!-- <meta property="og:image" content="thumbnail.png"> -->
 
   <link rel="icon" href="favicon.ico">
@@ -58,6 +58,7 @@
     var logging = log.noConflict();
   </script>
   <script type="text/javascript" src='FlowField.js' ) }}></script>
+  <script type="text/javascript" src='noise.js' ) }}></script>
   <script type="text/javascript" src='utils.js' ) }}></script>
   <script type="text/javascript" src='sketch.js' ) }}></script>
 
