--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
   <script>
     var logging = log.noConflict();
   </script>
-  <script type="text/javascript" src='FlowField.js' ) }}></script>
+  <script type="text/javascript" src='shape.js' ) }}></script>
   <script type="text/javascript" src='noise.js' ) }}></script>
   <script type="text/javascript" src='utils.js' ) }}></script>
   <script type="text/javascript" src='sketch.js' ) }}></script>
