class for noise

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
     var logging = log.noConflict();
   </script>
   <script type="text/javascript" src='shape.js' ) }}></script>
-  <script type="text/javascript" src='noise.js' ) }}></script>
+  <script type="text/javascript" src='noiseParticles.js' ) }}></script>
   <script type="text/javascript" src='utils.js' ) }}></script>
   <script type="text/javascript" src='sketch.js' ) }}></script>
 
