--- a/public/index.html
+++ b/public/index.html
@@ -53,10 +53,10 @@
 
   <!-- <script type="text/javascript" src="p5.js"></script> -->
   <script type="text/javascript" src="p5.min.js"></script>
-  <script type="text/javascript" src="loglevel.min.js"></script>
-  <script>
+  <!-- <script type="text/javascript" src="loglevel.min.js"></script> -->
+  <!-- <script>
     var logging = log.noConflict();
-  </script>
+  </script> -->
   <script type="text/javascript" src='shape.js' ) }}></script>
   <script type="text/javascript" src='lines.js' ) }}></script>
   <script type="text/javascript" src='noiseParticles.js' ) }}></script>
