--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     let alphabet = "123456789abcdefghijkmnopqrstuvwxyzABCDEFGHJKLMNPQRSTUVWXYZ"
     var fxhash = "oo" + Array(49).fill(0).map(_ => alphabet[(Math.random() * alphabet.length) | 0]).join('')
     // var fxhash = "ooWCvcfdxaRxiYE8ncJ2DLcp7kuoLQixDfu9GR6BRcVEKAFtbaf"
-    // var fxhash = "ooiG34HVqzDk6g7NxWUF9MvpaGV2ZWutuB4XMguaFvT4fJ1YGFJ"
+    var fxhash = "oofkpjQTCeDoaYr3ZJ99ocPCtErDXekisvYu1R1E8vivGtdbtZv"
     let b58dec = str => [...str].reduce((p, c) => p * alphabet.length + alphabet.indexOf(c) | 0, 0)
     let fxhashTrunc = fxhash.slice(2)
     let regex = new RegExp(".{" + ((fxhash.length / 4) | 0) + "}", 'g')
